LDMS/cray_system_sampler: dynamic load of nvidia-ml. uncompiled. untested.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -78,8 +78,8 @@ OPTION_DEFAULT_DISABLE([gpcdr], [ENABLE_GPCDR]) dnl use gpcdr vs gpcd
 OPTION_DEFAULT_DISABLE([gpcd], [ENABLE_GPCD]) dnl for the path to gpcd if relevant
 OPTION_WITH([gpcd], [GPCD])
 OPTION_DEFAULT_DISABLE([nvidia], [ENABLE_NVIDIA])
-OPTION_WITH([nvidia-inc-base], [NVIDIA_INC_BASE])
-OPTION_WITH([nvidia-lib-base], [NVIDIA_LIB_BASE])
+OPTION_WITH([nvidia-inc-base], [NVIDIA_INC_BASE]) dnl for the path to nvidia include
+dnl Will need to have the NVIDIA library in the LD_LIBRARY_PATH
 OPTION_DEFAULT_DISABLE([rca], [ENABLE_RCA])
 OPTION_WITH([rca], [RCA])
 OPTION_DEFAULT_DISABLE([krca], [ENABLE_KRCA])
@@ -291,11 +291,20 @@ then
 
 	if test -z "$ENABLE_NVIDIA_TRUE"
 	then
-	AC_DEFINE([HAVE_NVIDIA],[1],[Compile with nvidia-ml using NVIDIA paths.])
+	nvidiaincfile="$NVIDIA_INC_BASE/include/nvml.h"
+	if ! test -f $nvidiaincfile; then
+           AC_MSG_WARN([
+         ++++++++++++++++++++++++++++++++++++++++++++
+           nvidia include file not available:
+           $nvidiaincfile
+           We hope your runtime environment has it.
+         ++++++++++++++++++++++++++++++++++++++++++++
+          ])
+          fi
+	  AC_DEFINE([HAVE_NVIDIA],[1],[Include NVIDIA metrics.])
 	else
-	AC_MSG_RESULT([Not compiling with nvidia-ml.])
+          AC_MSG_RESULT([Not including NVIDIA metrics.])
 	fi
-
 fi
 
 dnl Reset LIBS variable.
