--- a/ldms/src/sampler/cray_system_sampler/Makefile.am
+++ b/ldms/src/sampler/cray_system_sampler/Makefile.am
@@ -4,22 +4,14 @@ CORE = ../../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
-if ENABLE_NVIDIA
 CRAY_CFLAGS_ = $(AM_CFLAGS) @NVIDIA_INCDIR_BASE_INCDIR_FLAG@
-CRAY_LDFLAGS_ = $(AM_LDFLAGS) @NVIDIA_LIBDIR_BASE_LIBDIR_FLAG@ -lnvidia-ml
 NVIDIA_SOURCES_ = nvidia_metrics.h nvidia_metrics.c
-else
-CRAY_CFLAGS_ = $(AM_CFLAGS) 
-CRAY_LDFLAGS_ = $(AM_LDFLAGS)
-NVIDIA_SOURCES_ = 
-endif
 
 if ENABLE_LUSTRE
-
 CRAY_CFLAGS_ += @RCA_INCDIR_FLAG@ @KRCA_INCDIR_FLAG@ \
 			@CRAY_HSS_DEVEL_INCDIR_FLAG@ \
                         -I@CRAY_HSS_DEVEL_INCDIR@/rsms
-CRAY_LDFLAGS_ += @RCA_LIB64DIR_FLAG@ @RCA_LIBDIR_FLAG@  \
+CRAY_LDFLAGS_ = $(AM_LDFLAGS) @RCA_LIB64DIR_FLAG@ @RCA_LIBDIR_FLAG@  \
 			@CRAY_HSS_DEVEL_LIBDIR_FLAG@ \
 			-lrca 
 
