--- a/ldms/src/sampler/cray_system_sampler/Makefile.am
+++ b/ldms/src/sampler/cray_system_sampler/Makefile.am
@@ -5,7 +5,6 @@ AM_CFLAGS = -I$(srcdir)/$(CORE) -I$(top_srcdir) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 
 if ENABLE_LUSTRE
-
 CRAY_CFLAGS_ = $(AM_CFLAGS) @RCA_INCDIR_FLAG@ @KRCA_INCDIR_FLAG@ \
 			@CRAY_HSS_DEVEL_INCDIR_FLAG@ \
                         -I@CRAY_HSS_DEVEL_INCDIR@/rsms
@@ -18,8 +17,7 @@ librtr_util_la_CFLAGS = $(CRAY_CFLAGS_)
 librtr_util_la_LDFLAGS = $(CRAY_LDFLAGS_)
 pkglib_LTLIBRARIES += librtr_util.la
 
-CRAY_SOURCES_ = cray_system_sampler.c \
-	gemini_metrics.h \
+CRAY_SOURCES_ = gemini_metrics.h \
 	rca_metrics.h rca_metrics.c\
 	general_metrics.c general_metrics.h \
 	rtr_util.c rtr_util.h
@@ -28,15 +26,16 @@ CRAY_LIBADD_ = $(COMMON_LIBADD) \
 			./librtr_util.la
 
 if ENABLE_GPCDR
-libcray_system_sampler_r_la_CFLAGS = $(CRAY_CFLAGS_)
-libcray_system_sampler_r_la_LDFLAGS = $(CRAY_LDFLAGS_)
-libcray_system_sampler_r_la_SOURCES = $(CRAY_SOURCES_) \
+libcray_gemini_r_sampler_la_CFLAGS = $(CRAY_CFLAGS_)
+libcray_gemini_r_sampler_la_LDFLAGS = $(CRAY_LDFLAGS_)
+libcray_gemini_r_sampler_la_SOURCES = $(CRAY_SOURCES_) \
+	cray_gemini_r_sampler.c \
 	gemini_metrics_gpcdr.c gemini_metrics_gpcdr.h
-libcray_system_sampler_r_la_LIBADD = $(CRAY_LIBADD_)
-pkglib_LTLIBRARIES += libcray_system_sampler_r.la
+libcray_gemini_r_sampler_la_LIBADD = $(CRAY_LIBADD_)
+pkglib_LTLIBRARIES += libcray_gemini_r_sampler.la
+endif
 
-else
-
+if ENABLE_GPCD
 CRAY_CFLAGS_ += @GPCD_INCDIR_FLAG@
 CRAY_LDFLAGS_ += @GPCD_LIB64DIR_FLAG@ @GPCD_LIBDIR_FLAG@ -lgpcd
 
@@ -45,12 +44,13 @@ libgpcd_util_la_CFLAGS = $(CRAY_CFLAGS_)
 libgpcd_util_la_LDFLAGS = $(CRAY_LDFLAGS_)
 pkglib_LTLIBRARIES += libgpcd_util.la
 
-libcray_system_sampler_d_la_CFLAGS = $(CRAY_CFLAGS_)
-libcray_system_sampler_d_la_LDFLAGS = $(CRAY_LDFLAGS_)
-libcray_system_sampler_d_la_SOURCES = $(CRAY_SOURCES_) \
+libcray_gemini_d_sampler_la_CFLAGS = $(CRAY_CFLAGS_)
+libcray_gemini_d_sampler_la_LDFLAGS = $(CRAY_LDFLAGS_)
+libcray_gemini_d_sampler_la_SOURCES = $(CRAY_SOURCES_) \
+	cray_gemini_d_sampler.c \
 	gpcd_util.c gpcd_util.h \
 	gemini_metrics_gpcd.c gemini_metrics_gpcd.h
-libcray_system_sampler_d_la_LIBADD = $(CRAY_LIBADD_) ./libgpcd_util.la
-pkglib_LTLIBRARIES += libcray_system_sampler_d.la
+libcray_gemini_d_sampler_la_LIBADD = $(CRAY_LIBADD_) ./libgpcd_util.la
+pkglib_LTLIBRARIES += libcray_gemini_d_sampler.la
 endif
 endif
