--- a/configure.ac
+++ b/configure.ac
@@ -10,6 +10,7 @@ AM_CONFIG_HEADER(config.h)
 AC_CONFIG_SUBDIRS([lib ldms])
 AC_PROG_CC
 AM_INIT_AUTOMAKE([foreign -Wno-portability silent-rules])
+m4_ifndef([AM_SILENT_RULES], [m4_define([AM_SILENT_RULES],[])])
 AM_SILENT_RULES([yes])
 AM_PROG_LIBTOOL
 
