roracleGemini: Ben's FIXES for building w/o openssl-devel nor auth

--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -17,10 +17,14 @@ ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h ldms_auth.h ldms_xprt_cmd.h
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h ldms_auth.c
 #libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@ \
-			-lmmalloc -lcoll \
-			@OPENSSL_LIBS@ \
-			-lpthread \
+			-lmmalloc -lcoll 
+
+if ENABLE_AUTHENTICATION
+libldms_la_LIBADD += @OPENSSL_LIBS@
+endif
+libldms_la_LIBADD += -lpthread \
 			-ldl -lrt
+
 lib_LTLIBRARIES += libldms.la
 
 ldms_config.h: ../../config.h
