--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -8,20 +8,26 @@ AM_CFLAGS += \
 AM_LDFLAGS = @OVIS_LIB_LIB64DIR_FLAG@ @OVIS_LIB_LIBDIR_FLAG@
 AM_CPPFLAGS = -DPLUGINDIR='"$(pkglibdir)"'
 
+if ENABLE_AUTHENTICATION
+SSL_LDFLAGS=@OPENSSL_LDFLAGS@
+SSL_LIBS=@OPENSSL_LIBS@
+SSL_INCLUDES=@OPENSSL_INCLUDES@
+endif
+
 
 ldms_ls_SOURCES = ldms_ls.c
 ldms_ls_LDADD = $(CORE)/libldms.la -lrt -lovis_util -lmmalloc -lcoll \
-		@OPENSSL_LDFLAGS@ @OPENSSL_LIBS@
+		$(SSL_LDFLAGS) $(SSL_LIBS)
 
 ldmsd_SOURCES = ldmsd.c ldmsd_store.c
 ldmsd_LDADD = $(CORE)/libldms.la
 ldmsd_LDFLAGS = $(AM_LDFLAGS) @LIBEVENT_LIB64DIR_FLAG@ @LIBEVENT_LIBDIR_FLAG@ \
-		@OPENSSL_LDFLAGS@ \
+		$(SSL_LDFLAGS) \
 		-levent -lpthread -levent_pthreads \
 		-lovis_util -lmmalloc -lcoll \
-		@OPENSSL_LIBS@ \
+		$(SSL_LIBS) \
 		-ldl
-ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@ @OPENSSL_INCLUDES@
+ldmsd_CFLAGS = $(AM_CFLAGS) @LIBEVENT_INCDIR_FLAG@ $(SSL_INCLUDES)
 
 if ENABLE_YAML
 ldmsd_LDFLAGS += -lyaml
