baler: parallel baler feature
In the old days, baler daemons in different hosts are totally
independent. No information is shared. This changeset implement
slave-master scheme of dictionary (for token and patterns) sharing
among baler daemons. There will be one master and any number of
slaves. The master will have all dictionary information, while the
slaves may have only the parts that they use.

Change-Id: Iec80c7451c8cb5b6d82f2e1dc645bc47aafec8e2

--- a/baler/configure.ac
+++ b/baler/configure.ac
@@ -33,6 +33,8 @@ OPTION_WITH([sos], [SOS])
 OPTION_WITH([ovis-lib], [OVIS_LIB])
 OPTION_WITH([ocm], [OCM])
 
+OPTION_DOC
+
 dnl Check for zap
 AC_CHECK_LIB(zap, zap_new, [],
 	AC_MSG_ERROR([zap library not found. Baler requires libzap. libzap is
