baler: Add bmap_dump utility
Add bmap_dump utility to help investigating baler internal data.

Change-Id: I5e1918f6cc1d96b20332cf79c927ff61eaab227e

--- a/baler/src/baler/Makefile.am
+++ b/baler/src/baler/Makefile.am
@@ -53,4 +53,8 @@ balerd_LDFLAGS += @OCM_LIBDIR_FLAG@
 endif
 bin_PROGRAMS += balerd
 
+bmap_dump_SOURCES = bmap_dump.c
+bmap_dump_LDADD = libbaler.la
+bin_PROGRAMS += bmap_dump
+
 pkginclude_HEADERS = bmem.h bmapper.h butils.h bmlist.h
