crayaries: 1) address AM_SILENT_RULES 2) fix for GPCD flag name change. Gemini gpcd uncompiled. Gemini gpcdr compiled and tested.

--- a/ldms/src/sampler/cray_system_sampler/Makefile.am
+++ b/ldms/src/sampler/cray_system_sampler/Makefile.am
@@ -36,8 +36,8 @@ endif
 endif
 
 if ENABLE_GEMINI_GPCD
-GPCD_UTIL_CFLAGS_= $(CRAY_CFLAGS_) @GPCD_INCDIR_FLAG@
-GPCD_UTIL_LDFLAGS_ =  $(CRAY_LD_FLAGS) @GPCD_LIB64DIR_FLAG@ @GPCD_LIBDIR_FLAG@ -lgpcd
+GPCD_UTIL_CFLAGS_= $(CRAY_CFLAGS_) @GEMINI_GPCD_INCDIR_FLAG@
+GPCD_UTIL_LDFLAGS_ =  $(CRAY_LD_FLAGS) @GEMINI_GPCD_LIB64DIR_FLAG@ @GEMINI_GPCD_LIBDIR_FLAG@ -lgpcd
 
 libgpcd_util_la_SOURCES = gpcd_util.c gpcd_util.h gemini.h
 libgpcd_util_la_CFLAGS = $(GPCD_UTIL_CFLAGS_)
