ldms: Fix sos configure option
The ldmsd_sos_init program will not be compile if the sos option is disable.

Change-Id: I27e7fa3ec13af6c8ec4a2ce092bdb3ab64335e74

--- a/ldms/src/ldmsd/Makefile.am
+++ b/ldms/src/ldmsd/Makefile.am
@@ -1,4 +1,7 @@
-sbin_PROGRAMS = ldmsd ldms_ls ldmsctl ldmsd_sos_init
+sbin_PROGRAMS = ldmsd ldms_ls ldmsctl
+if ENABLE_SOS
+sbin_PROGRAMS += ldmsd_sos_init
+endif
 CORE = ../core
 AM_CFLAGS = -I$(srcdir)/$(CORE) @OVIS_LIB_INCDIR_FLAG@
 AM_LDFLAGS = @OVIS_LIB_LIBDIR_FLAG@
