baler: butils - bstr distance functions
- Levenshtein edit distance function
- LCS length calculation
- LCS edit distance function
- Test program for these functions

Change-Id: I983cc9780837d89b5ccf4bfc1f0c10f4361c5b42

--- a/baler/src/test/Makefile.am
+++ b/baler/src/test/Makefile.am
@@ -14,3 +14,6 @@ bset_test_SOURCES = bset_test.c
 bset_test_LDADD = ../baler/libbset.la
 bin_PROGRAMS += bset_test
 
+bstr_dist_u32_test_SOURCES = bstr_dist_u32_test.c
+bstr_dist_u32_test_LDADD = ../baler/libbutils.la
+bin_PROGRAMS += bstr_dist_u32_test
