ldms: disable sysclassib by default.

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -65,7 +65,7 @@ OPTION_DEFAULT_ENABLE([procnfs], [ENABLE_PROCNFS])
 OPTION_DEFAULT_ENABLE([procsensors], [ENABLE_PROCSENSORS])
 OPTION_DEFAULT_ENABLE([procstatutil], [ENABLE_PROCSTATUTIL])
 dnl OPTION_DEFAULT_DISABLE([sedc], [ENABLE_SEDC])
-OPTION_DEFAULT_ENABLE([sysclassib], [ENABLE_SYSCLASSIB])
+OPTION_DEFAULT_DISABLE([sysclassib], [ENABLE_SYSCLASSIB])
 OPTION_DEFAULT_ENABLE([vmstat], [ENABLE_VMSTAT])
 OPTION_DEFAULT_ENABLE([procdiskstats], [ENABLE_PROCDISKSTATS])
 OPTION_DEFAULT_DISABLE([cray_system_sampler], [ENABLE_CRAY_SYSTEM_SAMPLER])
