ldms: zap replaces ldms_xprt
NOTE: rebased on top of ldms3

NOTE: This is expected to be a long-live change in Gerrit iterative
review process. So, this first one is an early design review. The
detail is as follows.

This change addresses the following:

- Replacing ldms_xprt with zap
- Modifying ldmsd, ldms_ls connect to zap non-blocking connect model

This has been tested on both sock and rdma. ldms_ls can query ldmsd
just fine.

Found bugs that will be addressed in another patch (or other changes)
- ldms_xprt.c:alloc_req_ctxt() leaking
- set descriptor (sd) leak
- "local" transport elimination

Change-Id: I4f2c663a6ee677de16a54456ed54413e85ff15f7

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -30,12 +30,6 @@ OPTION_DEFAULT_ENABLE([sensors], [ENABLE_SENSORS])
 OPTION_DEFAULT_ENABLE([glib], [ENABLE_GLIB])
 OPTION_DEFAULT_DISABLE([yaml], [ENABLE_YAML])
 
-dnl Options for transport
-OPTION_DEFAULT_ENABLE([xprt], [ENABLE_XPRT])
-OPTION_DEFAULT_DISABLE([ugni], [ENABLE_UGNI])
-OPTION_DEFAULT_DISABLE([rdma], [ENABLE_RDMA])
-OPTION_DEFAULT_ENABLE([sock], [ENABLE_SOCK])
-
 dnl Options for store
 OPTION_DEFAULT_ENABLE([store], [ENABLE_STORE])
 OPTION_DEFAULT_DISABLE([mysql], [ENABLE_MYSQL])
@@ -232,7 +226,7 @@ LIBS=""
 AC_SUBST(ac_configure_args)
 AC_SUBST(configure_input)
 
-AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile src/xprt/Makefile
+AC_CONFIG_FILES([Makefile src/Makefile src/core/Makefile
 		 src/store/Makefile src/sampler/Makefile
 		 src/sampler/lustre/Makefile
 		 src/sampler/hadoop/Makefile
