--- a/ldms/src/core/Makefile.am
+++ b/ldms/src/core/Makefile.am
@@ -8,7 +8,7 @@ ldmscoreinclude_HEADERS = ldms.h ldmsd.h ldms_xprt.h
 libldms_la_SOURCES = ldms.c ldms_xprt.c ldms_private.h
 libldms_la_CFLAGS = @OVIS_LIB_INCDIR_FLAG@
 libldms_la_LIBADD = -ldl -lpthread -lcoll @OVIS_LIB_LIBDIR_FLAG@ \
-		    -lmmalloc
+		    -lmmalloc -lzap
 lib_LTLIBRARIES += libldms.la
 
 install-data-hook:
