baler: bhash_test
A test program for bhash utility.

Change-Id: I8be1bd76a50785255abb59808a091b9189323765

--- a/baler/src/test/Makefile.am
+++ b/baler/src/test/Makefile.am
@@ -17,3 +17,7 @@ bin_PROGRAMS += bset_test
 bstr_dist_u32_test_SOURCES = bstr_dist_u32_test.c
 bstr_dist_u32_test_LDADD = ../baler/libbutils.la
 bin_PROGRAMS += bstr_dist_u32_test
+
+bhash_test_SOURCES = bhash_test.c
+bhash_test_LDADD = ../baler/libbaler.la
+bin_PROGRAMS += bhash_test
