baler: bmhash_test program
Change-Id: Ieb1b278983f8f5d7a70d0c63687371696e6c0656

--- a/baler/src/test/Makefile.am
+++ b/baler/src/test/Makefile.am
@@ -21,3 +21,7 @@ bin_PROGRAMS += bstr_dist_u32_test
 bhash_test_SOURCES = bhash_test.c
 bhash_test_LDADD = ../baler/libbaler.la
 bin_PROGRAMS += bhash_test
+
+bmhash_test_SOURCES = bmhash_test.c
+bmhash_test_LDADD = ../baler/libbaler.la
+bin_PROGRAMS += bmhash_test
