baler: btkn - separate btkn_types from btkn.h header.
Change-Id: I16f0b504560c12995890507f60108c9df15f470e

--- a/baler/src/baler/Makefile.am
+++ b/baler/src/baler/Makefile.am
@@ -75,6 +75,7 @@ pkginclude_HEADERS = barray.h \
 		     bqueue.h \
 		     bset.h \
 		     btkn.h \
+		     btkn_types.h \
 		     btypes.h \
 		     butils.h \
 		     bwqueue.h
