baler: bhttpd API and relocate '/meta' hadling code.
Introduce bhttpd API for additional URI handling in the future. Also
relocate the '/meta' URI handling code as a test of the API.

Change-Id: I03b682813ca710e93717c64e1882bca02ec65a90

--- a/baler/src/bhttpd/Makefile.am
+++ b/baler/src/bhttpd/Makefile.am
@@ -3,7 +3,8 @@ bin_PROGRAMS =
 
 AM_CFLAGS = -I$(srcdir)/../
 
-bhttpd_SOURCES = bhttpd.c bq_fmt_json.c
+bhttpd_SOURCES = bhttpd.c bq_fmt_json.c \
+		 bhttpd_meta.c
 bhttpd_LDADD = ../baler/libbaler.la \
 	       ../query/libbquery.la \
 	       -lpthread -levent -lzap
