--- a/baler/src/bhttpd/Makefile.am
+++ b/baler/src/bhttpd/Makefile.am
@@ -4,7 +4,8 @@ bin_PROGRAMS =
 AM_CFLAGS = -I$(srcdir)/../
 
 bhttpd_SOURCES = bhttpd.c bq_fmt_json.c \
-		 bhttpd_meta.c
+		 bhttpd_meta.c \
+		 bhttpd_query.c
 bhttpd_LDADD = ../baler/libbaler.la \
 	       ../query/libbquery.la \
 	       -lpthread -levent -lzap
