Refactor LDMS storage back-end to accomodate LDMS V3
- Removed the metric vector management routines
- Renamed some API to be more consistent, e.g.
   ldms_get_metric() -> ldms_get_metric_by_name()
- Simplified the storage policy managment and made it more
  robust when policies are added after hostsets, and vice versa
- Removed the store plugin, get() and destroy() methods
- Fixed a bug where the control socket was not getting destroyed on exit
- Refactored and tested store_csv, store_mysql, and store_sos.
- Refactored but have not tested store_flatfile, store_mysqlbulk and store_tahoma_sos.c
- Added an empty test for red-black-trees

Signed-off-by: Tom Tucker <tom@ogc.us>
Change-Id: I6d11518336d250d0fa5d9c1ee132cb9e1a4f8b14

--- a/ldms/configure.ac
+++ b/ldms/configure.ac
@@ -175,21 +175,24 @@ fi
 
 if test -z "$ENABLE_SOS_TRUE"
 then
-AC_CHECK_LIB( sos, sos_open,
+OCFLAGS=$CFLAGS
+CFLAGS=-I$SOS_INCDIR
+AC_CHECK_HEADERS(sos/sos.h,
+	[],
 	[
-		AC_CHECK_HEADERS($SOS_INCDIR/sos/sos.h,
-		[],
-		[
-			AC_MSG_FAILURE([sos/sos.h not found])
-		],
-		)
+		AC_MSG_FAILURE([sos/sos.h not found])
+	],
+)
+AC_CHECK_LIB( sos, sos_container_open,
+	[
 	],
 	[
 		AC_MSG_FAILURE(libsos not found)
 	],
-	$SOS_LIB64DIR_FLAG $SOS_LIBDIR_FLAG
+	[ $SOS_LIB64DIR_FLAG $SOS_LIBDIR_FLAG ]
 )
 dnl Reset LIBS variable.
+CFLAGS=$OCFLAGS
 LIBS=""
 fi
 
